fix: mobile view multiple lifts visibility fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -74,10 +74,13 @@ body {
   border-bottom: 2px solid #5f6f65;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-left: 5px;
   margin-right: 5px;
-  width: 98vw;
+  min-width: 100vw;
+  max-width: 100vw;
 }
+
 .floors-container button {
   display: block;
   text-align: center;
@@ -97,25 +100,41 @@ body {
 /* Lift Container */
 .lift-simulation-container {
   height: 100vh;
-  width: 100vw;
+  /* min-width: 100vw;
+  width: 100vw; */
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .lift {
   position: relative;
+  /* width: 100px;
+  max-width: 45px;
+  max-height: 60px; */
+  /* height: 120px; */
+  min-width: 45px;
+  max-width: 45px;
   width: 100px;
+  min-height: 60px;
   height: 120px;
+  max-height: 60px;
   box-sizing: border-box;
   background-size: cover;
   border: 2px solid black;
   background-color: #f8eded;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
   overflow: hidden;
+  flex-wrap: wrap;
+  align-self: center;
+  margin-right: 0.5rem;
 }
 .lift-button {
-  width: 50px;
-  height: 50px;
-  font-size: 28px;
+  /* width: 30px;
+  height: 30px; */
+  font-size: 20px;
 }
 .left-door,
 .right-door {
